Removed extra files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "notebook.kernelProviderAssociations": [
 
+
   ],
 
   "ruby.rubocop.executePath": "",
@@ -11,7 +12,7 @@
   // "ruby.rubocop.executePath": "D:/bin/Ruby22-x64/bin/"
 
   // If not specified, it assumes a null value by default.
-  "ruby.rubocop.configFilePath": "/.rubocop.yml",
+  "ruby.rubocop.configFilePath": "/home/dev/.rvm/gems/ruby-2.7.0/bin/rubocop",
 
   // default true
   "ruby.rubocop.onSave": true
